fix: fixes horizontal scroll bar issue when in panel for left nav

--- a/src/DetailsView/components/nav-link-button.scss
+++ b/src/DetailsView/components/nav-link-button.scss
@@ -6,6 +6,7 @@ button {
     &.nav-link-button {
         width: calc(100% - #{$pivotItemLeftBorderWidth});
         padding-left: unset;
+        padding-right: unset;
         &:hover,
         &:active,
         &:focus,
